--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "is-valid-json-action",
-  "version": "1.0.1",
+  "name": "get-version-from-package-json",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -8,15 +8,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/johnstonmatt/is-valid-json-action.git"
+    "url": "git+https://github.com/polyseam/get-version-from-package-json.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/johnstonmatt/is-valid-json-action/issues"
+    "url": "https://github.com/polyseam/get-version-from-package-json/issues"
   },
-  "homepage": "https://github.com/johnstonmatt/is-valid-json-action#readme",
+  "homepage": "https://github.com/polyseam/get-version-from-package-json",
   "dependencies": {
     "@actions/core": "^1.6.0",
     "@actions/github": "^5.0.0"
