--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,19 @@
 on: [push]
 
 jobs:
-  test_is-valid-json-action:
+  test_get-version-key-from-json-action:
     runs-on: ubuntu-latest
-    name: A job to test whether the is-valid-json is working properly
+    name: A job to test whether the get-version-key-from-json action is working
     steps:
       # To use this repository's private action,
       # you must check out the repository
       - name: Checkout
         uses: actions/checkout@v3
-      - name: get-version-from-package-json
+      - name: Get Version Key from JSON
         uses: ./ # Uses an action in the root directory
-        id: get-version-from-package-json
+        id: get-version-key-from-json-step
         with:
-          get-version-from-package-json : './test-data/package.json'
-      - name: print-validity
-        run: echo "The version key in your json was ${{ steps.get-version-from-package-json.outputs.version }}"
+          path-to-json : './test-data/package.json'
+      - name: print version output
+        run: echo "The version key in your json was ${{ steps.get-version-key-from-json-step.outputs.version }}"
      
