--- a/action.yml
+++ b/action.yml
@@ -1,12 +1,12 @@
-name: 'Get Version from package.json'
+name: 'Get Version key from JSON'
 description: 'Reads the "version" key from a json file'
 inputs:
-  path-to-package-json:  # id of input
-    description: 'path to package.json'
+  path-to-json:  # id of input
+    description: 'path to json from which version should be read'
     required: true
 outputs:
   version:
-    description: 'current version in package.json'
+    description: 'current version found in json file'
 runs:
   using: 'node16'
   main: 'index.js'
